# systemized

./: CMakeLists.txt
include/: AudioIO.h  ConsoleUtils.h  MidiBase.h  MidiIO.h  MidiReceiver.h  MidiSender.h
src/: AudioIO.cpp  ConsoleUtils.cpp  MidiIO.cpp  MidiReceiver.cpp  MidiSender.cpp  main.cpp
